# mmcc-backend

./: .env.example  .gitignore  Dockerfile.worker  README.md  docker-compose.dev.yaml  pyproject.toml  repomix-output.xml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 1b458f70ba95_generate_user_sim_and_task_related_.py  9ad317dd400a_implement_users_table.py  ff628e3fc979_implement_simulations_table.py
scripts/: monitor_worker.py
src/: .service.env.example  config.py  main.py
src/authorization/: .authorization.env.example  config.py
src/background_tasks/db_utils/: background_tasks.py
src/background_tasks/models/: background_tasks.py  enums.py
src/core/: .argon.env.example  .logger.env.example  config.py  db_session.py  exception_handlers.py  lifespan.py  logging.py  model_base.py  security.py
src/simulations/: .worker.env.example  config.py  worker.py
src/simulations/core/: distributions.py  engine.py  enums.py  events.py  optimization.py  schemas.py  service_time_analysis.py  statistics.py  temporal_analysis.py  theoretical.py  utils.py  visualization.py
src/simulations/db_utils/: exceptions.py  simulation_configurations.py  simulation_reports.py
src/simulations/models/: enums.py  simulations.py
src/simulations/tasks/: animation.py  cleanup.py  db_session.py  dlq.py  simulations.py  state_manager.py  status_utils.py
src/users/alembic/: env.py
src/users/db_utils/: exceptions.py  users.py
src/users/models/: users.py
tests/: conftest.py
tests/core/: test_exception_handlers.py  test_logging.py  test_security.py
(+42 files in other folders)
