[project]
name = "backend-mmcc"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "another-fastapi-jwt-auth>=0.1.6",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.117.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "pytest-asyncio>=1.2.0",
    "python-json-logger>=3.3.0",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.2",
    "pytest-cov>=7.0.0"
]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 70
